--- a/index.html
+++ b/index.html
@@ -1,49 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Carosello News</title>
-    <link rel="stylesheet" href="css/style.css"/>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <title>Slider</title>
 </head>
+
 <body>
 
     <div id="app">
 
-        <div class="container" >
+        <div class="container">
             <div class="slider-wrapper" tabindex="0">
 
                 <div class="item">
-                    <img src="img/01.jpg" alt="Svezia" />
+                    <img :src="slides[indexSlide].image" :alt="slides[indexSlide].title" />
                     <div class="text">
-                        <h3>Svezia</h3>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit tempore aliquid deleniti aut
-                            veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum corporis.
-                        </p>
+                        <h3>{{slides[indexSlide].title}}</h3>
+                        <p>{{slides[indexSlide].text}}</p>
                     </div>
                 </div>
 
-                <div class="thumbs">
-                    <div class="prev"></div>
-                    <div class="next"></div>
-                    <div class="thumb active">
-                        <img src="img/01.jpg" alt="Svezia"/>
-                    </div>
-                    <div class="thumb">
-                        <img src="img/02.jpg" alt="Svizzera" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/03.jpg" alt="Gran Bretagna" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/04.jpg" alt="Germania" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/05.jpg" alt="Paradise" />
+                <div @mouseover="stopCycle()" @mouseleave="playCycle()" class="thumbs">
+                    <div @click="prevSlide()" class="prev"></div>
+                    <div @click="nextSlide()" class="next"></div>
+                    <div v-for="(slide, index) in slides" class="thumb" :class="{'active':index === indexSlide}"
+                        @click="indexSlide = index">
+                        <img :src="slide.image" :alt="slide.title">
                     </div>
                 </div>
 
@@ -54,4 +41,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
